@@ -1,3 +1,11 @@
+2006-08-04 Paul Jakma <paul.jakma@sun.com>
+
+	* ospf_lsdb.c: (ospf_lsdb_delete_entry) new function, consolidate
+	  exact same functionality replicated in other functions.
+	  (ospf_lsdb_add) Strip out code by using ospf_lsdb_delete_entry.
+	  (ospf_lsdb_delete) ditto.
+	  (ospf_lsdb_delete_all) ditto.
+
 2006-07-27 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* ospfd.c: (ospf_router_id_update) Fix and document the algorithm for
